Add other handlers, timer loader selection dialog
Change-Id: Ie098c1a8565c0cc4dce17abc96dd6fbef16e76ee
Signed-off-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>

--- a/tmf/org.eclipse.tracecompass.tmf.ui/src/org/eclipse/tracecompass/internal/tmf/ui/project/dialogs/messages.properties
+++ b/tmf/org.eclipse.tracecompass.tmf.ui/src/org/eclipse/tracecompass/internal/tmf/ui/project/dialogs/messages.properties
@@ -12,5 +12,10 @@
 ###############################################################################
 SelectSpplementaryResources_DialogTitle=Delete Resources
 SelectSpplementaryResources_ResourcesGroupTitle=Select resources to delete
+SyncTimeLoadingSelectionDialog_ErrorInvalidLoadFrequency=Load frequency must be a valid positive number
+SyncTimeLoadingSelectionDialog_LoadFrequency=Load frequency (ms):
+SyncTimeLoadingSelectionDialog_LoadIncreasing=Load Increasing
+SyncTimeLoadingSelectionDialog_LoadingMode=Loading mode
+SyncTimeLoadingSelectionDialog_RefreshAll=Refresh All
 Dialog_SelectAll=Select All
 Dialog_DeselectAll=Deselect All
