--- a/tmf/org.eclipse.tracecompass.tmf.analysis.xml.ui/src/org/eclipse/tracecompass/internal/tmf/analysis/xml/ui/handler/messages.properties
+++ b/tmf/org.eclipse.tracecompass.tmf.analysis.xml.ui/src/org/eclipse/tracecompass/internal/tmf/analysis/xml/ui/handler/messages.properties
@@ -7,6 +7,7 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 ManageXMLAnalysisDialog_ImportXmlFile=Import XML analysis file
+ManageXMLAnalysisDialog_ImportDiagramFile=Diagram analysis file
 ManageXMLAnalysisDialog_Delete=Delete
 ManageXMLAnalysisDialog_DeleteConfirmation=Are you sure you want to delete {0}
 ManageXMLAnalysisDialog_DeleteFile=Delete XML file
